# RenderingPipeline

./: .gitignore  CMakeLists.txt
include/: app.h  matrix.h  mesh.h  ogl.h  param.h  primitives.h  shaderloader.h
include/pipeline/: attribute.h  fragmentshader.h  framebuffer.h  pipeline.h  texsampler.h  texture.h  vertexshader.h
shaders/: AO.cpp  AO.h  octree.cpp  octree.h  octreebuilder.cpp  octreebuilder.h  passthrough.h  phong.fs  phong.vs  raymarcher.h
src/: app.cpp  main.cpp  matrix.cpp  mesh.cpp  ogl.cpp  shaderloader.cpp
src/pipeline/: fragmentshader.cpp  framebuffer.cpp  pipeline.cpp  texsampler.cpp  texture.cpp  vertexshader.cpp
